examples/test/testpolicy14739.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14739
  namespace: namespace403
spec:
  podSelector:
    matchLabels:
      key9: value1
      key18: value46
      key31: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value0
      podSelector:
        matchLabels:
          key21: value27
          key14: value0
          key47: value25
